# Artery

./: .gitignore  README.md  cline_task_oct-10-2024_3-25-01-pm.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
knowledge-base/: Building AI_Exercise_Simulated_annealing.py
prompt-threads/: Conversation with ChatGPT.md  cline_task_oct-10-2024_12-54-09-pm.md  cline_task_oct-10-2024_3-49-50-pm.md
results/results_mep/animation/Ventilation_layout_generation/: Ventilation_layout_generation.mlt
src/: MEP.py  MEPcomponents.py  components.py  core.py  duct_routing_addition.py  generateFloors.py  geometry.py  geometry_internal.py  main.py  pathfinding.py  routing.py  structural.py  visualization.py
src/MEP/: components.py
src/problem_space/: generateFloors.py
src/structural/: core.py  floor_plan.py  scenario.py
src/visualization/: floorplan.py  path.py  room.py
tests/: conftest.py  index_route_test.py  test_components.py  test_conftest.py  test_geometry.py  test_integration.py  test_pathfinding.py  test_rooms.py  test_routing.py  test_scenario.py  test_structural.py  test_visualization  test_visualization.py
tests/2D/: index_route_test.py
