[project]
name = "artery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
